Update according to the KIP update